<resources>
<string name="app_name">Ghost Commander</string>
<string name="file">New</string>
<string name="location">Location</string>
<string name="list">List</string>
<string name="app">Application</string>
<string name="help">Help</string>
<string name="F1">Help</string>
<string name="F2">Rename</string>
<string name="F3">View</string>
<string name="F4">Edit</string>
<string name="SF4">File</string>
<string name="F5">Copy</string>
<string name="F6">Move</string>
<string name="F7">MkDir</string>
<string name="F8">Del</string>
<string name="F9">Prefs</string>
<string name="F10">Exit</string>
<string name="oth_sh_this">Show same dir</string>
<string name="oth_sh_dir">Open \"%s\" in other panel</string>
<string name="eq">Same</string>
<string name="change">Toggle</string>
<string name="tgl">Toggle</string>
<string name="sz">Info</string>
<string name="refresh">Refresh</string>
<string name="swap">Swap</string>
<string name="compare">Compare</string>
<string name="filter">Filter</string>
<string name="filter_canceled">Filter canceled</string>
<string name="enter">Change location</string>
<string name="home">Home</string>
<string name="sdcard">/sdcard</string>
<string name="softkbd">Keyboard</string>
<string name="enter_b">Location</string>
<string name="add_fav">Add to favorites</string>
<string name="add_fav_b">Add fave</string>
<string name="remount_b">Remount /system</string>
<string name="remount">Remount</string>
<string name="hidden">Hidden</string>
<string name="rescan">Rescan media</string>
<string name="favs">Favorites</string>
<string name="df_dnl">Downloads</string>
<string name="df_cam">Camera</string>
<string name="df_pic">Pictures</string>
<string name="df_mus">Music</string>
<string name="df_mov">Movies</string>
<string name="local">Local storage</string>
<string name="external">External card</string>
<string name="media">Media Store</string>
<string name="saf">Storage Access Framework</string>
<string name="ftp">FTP site</string>
<string name="sftp">SFTP site</string>
<string name="smb">Windows share</string>
<string name="plugins">Browse plugins</string>
<string name="root">Root mode</string>
<string name="mount">Mount points</string>
<string name="mount_b">Mounts</string>
<string name="apps">Applications</string>
<string name="exit">Exit</string>
<string name="forget">Forget (app exits)</string>
<string name="favs_descr">View and manage your list of favorite folders and sites</string>
<string name="local_descr">Browse, organize and modify the contents of the primary file system</string>
<string name="external_descr">Access files on the physically inserted SD card. It may be read-only on some devices. Use the SAF mode in such a case.</string>
<string name="media_descr">Browse your media files as the system sees them.</string>
<string name="saf_descr">Modify the external SD card or USB-OTG via the Storage Access Framework (SAF) interface</string>
<string name="ftp_descr">Connect to an FTP server</string>
<string name="sftp_descr">Connect to an SSH FTP (sftp) server</string>
<string name="smb_descr">Connect to shared folders on a Windows machine</string>
<string name="plugins_descr">Look for more Ghost Commander plugins</string>
<string name="root_descr">For rooted devices only: manage critical system files. Only proceed if you know what you\'re doing.</string>
<string name="mount_descr">Display a list of all mount points. Remount them to \"rw\" mode, then back to \"ro\" mode after changes. Proceed with caution.</string>
<string name="apps_descr">View and manage installed packages</string>
<string name="exit_descr">Close the application</string>
<string name="shortcut">Add shortcut</string>
<string name="enter_ftp">Connect to FTP</string>
<string name="enter_smb">Connect to Windows PC</string>
<string name="search_file">Search</string>
<string name="menu">Menu</string>
<string name="sort_by_name">By Name</string>
<string name="sort_by_ext">By Extension</string>
<string name="sort_by_size">By Size</string>
<string name="sort_by_date">By Date</string>
<string name="sort_by_name_b">By Name</string>
<string name="sort_by_ext_b">By Ext</string>
<string name="sort_by_size_b">By Size</string>
<string name="sort_by_date_b">By Date</string>
<string name="select_all">Select all</string>
<string name="unselect_all">Unselect all</string>
<string name="select_b">Select</string>
<string name="unselect_b">Unselect</string>
<string name="toggle_panels_mode">Change panels mode</string>
<string name="prefs">Settings</string>
<string name="save_prefs">Back up settings</string>
<string name="rest_prefs">Restore settings</string>
<string name="save_log">Save log to file</string>
<string name="prefs_saved">Your preferences have been saved</string>
<string name="prefs_restr">Your preferences have been restored</string>
<string name="about">About</string>
<string name="keys">Help</string>
<string name="new_file">Create a new text file</string>
<string name="new_folder">Create a new folder</string>
<string name="new_zip">Create a new ZIP file</string>
<string name="go_button">Go</string>
<string name="show_size">Info</string>
<string name="send_to">Send to…</string>
<string name="open_with">Open with…</string>
<string name="open">Open</string>
<string name="open_as">Open as…</string>
<string name="copy_name">Copy name to clipboard</string>
<string name="fav_fld">Add \"%s\" to favorites</string>
<string name="create_zip">Create a new ZIP file</string>
<string name="create_zip_title">Create ZIP file</string>
<string name="extract_zip">Extract ZIP</string>
<string name="file_name">File</string>
<string name="wait">wait…</string>
<string name="fail">FAILED</string>
<string name="failed">Error:\n</string>
<string name="default_uri_cmnt">Default location</string>
<string name="default_color">Default</string>
<string name="base_color">Base color</string>
<string name="typemasks">File masks</string>
<string name="color_sample">Sample</string>
<string name="add_new_type">Add new</string>
<string name="fav_comment">Comment:</string>
<string name="fav_dialog">Edit favorite</string>
<string name="dialog_yes">Yes</string>
<string name="dialog_no">No</string>
<string name="dialog_ok">OK</string>
<string name="dialog_cancel">Cancel</string>
<string name="dialog_close">Close</string>
<string name="dialog_exit">Exit</string>
<string name="dialog_browse">Browse</string>
<string name="dialog_abort">Abort</string>
<string name="dialog_retry">Retry</string>
<string name="dialog_ignore">Ignore</string>
<string name="dialog_replace_all">Replace all</string>
<string name="dialog_skip_all">Skip all</string>
<string name="dialog_select">Select</string>
<string name="dialog_unselect">Unselect</string>
<string name="filemask">File mask:</string>
<string name="for_files">Files</string>
<string name="for_dirs">Folders</string>
<string name="in_subf">Subdirs</string>
<string name="content">Content:</string>
<string name="bigger_than">Bigger\nthan:</string>
<string name="smaller_than">Smaller\nthan:</string>
<string name="mod_after">After</string>
<string name="mod_before">Before</string>
<string name="show_matched">Show matched</string>
<string name="hide_matched">Hide Matched</string>
<string name="launch">Launch</string>
<string name="operation">Operations</string>
<string name="view_title">View</string>
<string name="edit_title">Edit</string>
<string name="newf_title">Create file</string>
<string name="newf_prompt">Name of new file:</string>
<string name="mkdir_title">Create folder</string>
<string name="mkdir_prompt">Name of new folder:</string>
<string name="search_title">Search</string>
<string name="search_prompt">Search criteria:</string>
<string name="rename_title">Rename</string>
<string name="mult_rename_title">Rename multiple</string>
<string name="copy_title">Copy</string>
<string name="move_title">Move</string>
<string name="send_title">Send to…</string>
<string name="open_title">Open with…</string>
<string name="to_copy">&#xA0;</string>
<string name="to_move">&#xA0;</string>
<string name="to_rename">&#xA0;</string>
<string name="search">Search (regex):</string>
<string name="replace_to">Replace with:</string>
<string name="preview">Preview</string>
<string name="mult_rename_help">Use standard regular expressions to search string patterns in file names and replace what found.\n
In the replace string use back-reference like $1 to refer to a search group marked with parenthesis.\n
Use \\$ for the $ sign.\n
Use %# for file counter, %## with 2 digits and so on.       
</string>
<string name="copy_err">Nothing to copy</string>
<string name="rename_err">Cannot rename</string>
<string name="edit_err">Not editable</string>
<string name="no_items">No valid files to complete the operation</string>
<string name="inv_dest">Invalid destination</string>
<string name="inv_path">Invalid path</string>
<string name="find_on_fs_only">The search feature only works on the local file system</string>
<string name="on_fs_only">This feature only works on the local file system</string>
<string name="layout_settings">Appearance</string>
<string name="input_settings">Input</string>
<string name="editor_label">Text Editor</string>
<string name="panels_mode">Side-by-side panels</string>
<string name="summary_panels_mode">Show both panels side-by-side in a split screen view</string>
<string name="two_lines">Two lines in a row</string>
<string name="summary_two_lines">Show file attributes below file names</string>
<string name="show_icons">Enable icons</string>
<string name="summary_show_icons">Show file and folder icons instead of just text</string>
<string name="show_toolbar">Enable toolbar</string>
<string name="summary_show_toolbar">Show the toolbar at the bottom of the screen</string>
<string name="toolbar_preference">Customize the toolbar</string>
<string name="summary_toolbar_preference">Select which buttons to display, edit and arrange them</string>
<string name="finger_friendly">Finger-friendly</string>
<string name="summary_finger_friendly">Enlarge the user interface elements</string>
<string name="prevent_root">Warn on leaving /sdcard</string>
<string name="summary_prevent_root">Issue a warning when going to a device\'s root folder</string>
<string name="left_panel_settings">Left panel</string>
<string name="right_panel_settings">Right panel</string>
<string name="detailed_view_SbS">Detailed side-by-side mode</string>
<string name="summary_detailed_view_SbS">Show size and date for files in side-by-side mode</string>
<string name="detailed_view_Ovr">Detailed overlapped mode</string>
<string name="summary_detailed_view_Ovr">Show size and date for files in overlapped mode</string>
<string name="sorting">Sorting method</string>
<string name="summary_sorting">Choose how to sort files and folders</string>
<string name="sort_case">Ignore case in sorting</string>
<string name="summary_sort_case">Check this to ignore case sensitivity in file and folder sorting</string>
<string name="show_hidden">Show hidden files</string>
<string name="summary_show_hidden">Show files and folders with a preceding dot in their names</string>
<string name="arrow_mode">Override arrow buttons</string>
<string name="summary_arrow_mode">Left/right arrows perform toggle/select</string>
<string name="colors">Colors</string>
<string name="bgr_color_picker">Background</string>
<string name="summary_bgr_color_picker">Choose a color for the main background</string>
<string name="fgr_color_picker">Foreground</string>
<string name="summary_fgr_color_picker">Choose a color for file names and attributes</string>
<string name="sel_color_picker">Selected background</string>
<string name="summary_sel_color_picker">Choose a background color for selected files and the current panel\'s title</string>
<string name="editor_activity">Custom text editor</string>
<string name="summary_editor_activity">Enter the activity name of an external text editor</string>
<string name="donate">Make a donation</string>
<string name="online_help">Online help</string>
</resources>