<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceScreen
                android:key="left_panel_settings"
                android:title="@string/left_panel_settings">

		    <PreferenceCategory
		            android:title="@string/left_panel_settings">
		        <CheckBoxPreference
		                android:key="left_detailed_SbS"
		                android:title="@string/detailed_view_SbS"
		                android:summary="@string/summary_detailed_view_SbS" 
		                android:defaultValue="true"/>
		        <CheckBoxPreference
		                android:key="left_detailed_Ovr"
		                android:title="@string/detailed_view_Ovr"
		                android:summary="@string/summary_detailed_view_Ovr" 
		                android:defaultValue="true"/>
		        <ListPreference
		                android:key="left_sorting"
		                android:title="@string/sorting"
		                android:summary="@string/summary_sorting"
		                android:entries="@array/sorting"
		                android:entryValues="@array/sorting_vals"
		                android:dialogTitle="@string/sorting" 
		                android:defaultValue="n"/>                
		        <CheckBoxPreference
		                android:key="left_show_hidden"
		                android:title="@string/show_hidden"
		                android:summary="@string/summary_show_hidden" 
		                android:defaultValue="true"/>
		    </PreferenceCategory>
		</PreferenceScreen>
        <PreferenceScreen
                android:key="right_panel_settings"
                android:title="@string/right_panel_settings">
	     <PreferenceCategory
	            android:title="@string/right_panel_settings">
	        <CheckBoxPreference
	                android:key="right_detailed_SbS"
	                android:title="@string/detailed_view_SbS"
	                android:summary="@string/summary_detailed_view_SbS" 
	                android:defaultValue="true"/>
	        <CheckBoxPreference
	                android:key="right_detailed_Ovr"
	                android:title="@string/detailed_view_Ovr"
	                android:summary="@string/summary_detailed_view_Ovr" 
	                android:defaultValue="true"/>
	        <ListPreference
	                android:key="right_sorting"
	                android:title="@string/sorting"
	                android:summary="@string/summary_sorting"
	                android:entries="@array/sorting"
	                android:entryValues="@array/sorting_vals"
	                android:dialogTitle="@string/sorting" 
	                android:defaultValue="n"/>
	        <CheckBoxPreference
	                android:key="right_show_hidden"
	                android:title="@string/show_hidden"
	                android:summary="@string/summary_show_hidden" 
	                android:defaultValue="true"/>
	    </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceCategory
            android:title="@string/layout_settings">
        <CheckBoxPreference
                android:key="case_ignore"
                android:title="@string/sort_case"
                android:summary="@string/summary_sort_case" 
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="panels_mode"
                android:title="@string/panels_mode"
                android:summary="@string/summary_panels_mode" 
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="show_icons"
                android:title="@string/show_icons"
                android:summary="@string/summary_show_icons"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:key="two_lines"
                android:title="@string/two_lines"
                android:summary="@string/summary_two_lines"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="finger_friendly"
                android:title="@string/finger_friendly"
                android:summary="@string/summary_finger_friendly"
                android:defaultValue="true"/>
	    <PreferenceScreen
	                android:key="colors"
	                android:title="@string/colors">
            <PreferenceScreen
                    android:key="bgr_color_picker"
                    android:title="@string/bgr_color_picker"
                    android:summary="@string/summary_bgr_color_picker">
            </PreferenceScreen>
            <PreferenceScreen
                    android:key="fgr_color_picker"
                    android:title="@string/fgr_color_picker"
                    android:summary="@string/summary_fgr_color_picker">
            </PreferenceScreen>
	        <PreferenceScreen
                    android:key="sel_color_picker"
                    android:title="@string/sel_color_picker"
                    android:summary="@string/summary_sel_color_picker">
	        </PreferenceScreen>
	    </PreferenceScreen>
        <CheckBoxPreference
                android:key="show_toolbar"
                android:title="@string/show_toolbar"
                android:summary="@string/summary_show_toolbar"
                android:defaultValue="true"/>
        <PreferenceScreen
                android:key="toolbar_preference"
                android:title="@string/toolbar_preference"
                android:summary="@string/summary_toolbar_preference">
                
            <CheckBoxPreference
                    android:key="show_F1"
                    android:title="@string/show_F1"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_F2"
                    android:title="@string/show_F2"
                    android:defaultValue="true"/>
            <!--CheckBoxPreference
                    android:key="show_F3"
                    android:title="@string/show_F3"
                    android:defaultValue="true"/-->
            <CheckBoxPreference
                    android:key="show_F4"
                    android:title="@string/show_F4"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_SF4"
                    android:title="@string/show_SF4"
                    android:defaultValue="false"/>
            <CheckBoxPreference
                    android:key="show_F5"
                    android:title="@string/show_F5"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_F6"
                    android:title="@string/show_F6"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_F7"
                    android:title="@string/show_F7"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_F8"
                    android:title="@string/show_F8"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_F9"
                    android:title="@string/show_F9"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_F10"
                    android:title="@string/show_F10"
                    android:defaultValue="true"/>
            <CheckBoxPreference
                    android:key="show_eq"
                    android:title="@string/show_eq"
                    android:defaultValue="false"/>
            <CheckBoxPreference
                    android:key="show_tgl"
                    android:title="@string/show_tgl"
                    android:defaultValue="false"/>
            <CheckBoxPreference
                    android:key="show_sz"
                    android:title="@string/show_sz"
                    android:defaultValue="false"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/input_settings">
        <CheckBoxPreference
                    android:key="arrow_mode"
                    android:title="@string/arrow_mode"
                    android:summary="@string/summary_arrow_mode"
                    android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="prevent_root"
                android:title="@string/prevent_root"
                android:summary="@string/summary_prevent_root"
                android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/editor_label">
    <EditTextPreference 
        android:key="editor_activity" 
        android:title="@string/editor_activity" 
        android:summary="@string/summary_editor_activity" 
        android:defaultValue="@string/value_editor_activity"/>
    </PreferenceCategory>
</PreferenceScreen>
