<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="horizontal">

    <LinearLayout
         android:id="@+id/toolbar"
         android:orientation="horizontal"
         android:layout_width="1000dip" 
         android:layout_height="wrap_content"
         android:background="#333333"
         android:paddingTop="2dp">
            <Button android:id="@+id/F1"
                android:text="@string/F1"
                android:paddingTop="1dp"
                android:focusable="false"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
            <Button android:id="@+id/F2"
                android:text="@string/F2"
                android:paddingTop="1dp"
                android:focusable="false"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
            <Button android:id="@+id/F4"
                android:text="@string/F4"
                android:focusable="false"
                android:paddingTop="1dp" 
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
            <Button android:id="@+id/SF4"
                android:text="@string/SF4"
                android:focusable="false"
                android:paddingTop="1dp" 
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
            <Button android:id="@+id/F5"
	            android:text="@string/F5"
	            android:focusable="false"
	            android:paddingTop="1dp" 
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"/>         
            <Button android:id="@+id/F6"
	            android:text="@string/F6"
	            android:focusable="false"
	            android:paddingTop="1dp" 
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"/>         
            <Button android:id="@+id/F7"
	            android:text="@string/F7"
	            android:focusable="false"
	            android:paddingTop="1dp" 
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"/>
            <Button android:id="@+id/F8"
	            android:text="@string/F8"
	            android:focusable="false"
	            android:paddingTop="1dp" 
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"/>         
           <Button android:id="@+id/F9"
	            android:text="@string/F9"
	            android:focusable="false"
	            android:paddingTop="1dp" 
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"/>         
            <Button android:id="@+id/F10"
                android:text="@string/F10"
                android:focusable="false"
                android:paddingTop="1dp" 
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
 
             <Button android:id="@+id/eq"
                android:text="@string/eq"
                android:focusable="false"
                android:paddingTop="1dp" 
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
             <Button android:id="@+id/tgl"
                android:text="@string/tgl"
                android:focusable="false"
                android:paddingTop="1dp" 
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
             <Button android:id="@+id/sz"
                android:text="@string/sz"
                android:focusable="false"
                android:paddingTop="1dp" 
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"/>         
     </LinearLayout>
 </HorizontalScrollView>
 